--- a/style.css
+++ b/style.css
@@ -82,11 +82,12 @@ body {
   background-position: center;
   color: #ffffff;
   box-sizing: border-box;
-  padding: 56px 0 98px;
+  padding: 56px 0 0;
 }
 
 .cover__container {
-
+  width: 90%;
+  margin: auto;
 }
 
 .cover__title {
@@ -130,40 +131,54 @@ body {
 
 
 .cover__capation {
-  font-size: 24px;
+  font-size: 10px;
   font-style: normal;
-  line-height: 34px;
+  line-height: 14px;
+  letter-spacing: 1.5px;
+  padding-top: 8px;
   text-align: center;
-  width: 60%;
+  max-width: 984px;
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0px auto 0px;
   justify-content: flex-start;
-  margin-top: 20px;
-  margin-bottom: 0;
 }
 
 /* travel */
 
   .travel {
-      width: 80%;
-      margin: 0 auto;
+    color: #ffffff;
+  }
+
+  .travel__kotainer {
+    width: 984px;
+    margin: 0 auto;
+    
+
   }
 
   .travel__title {
-  font-weight: 600;
-  font-size: 60px;
-  line-height: 1.15;
-  margin-top: 0;
-  margin-bottom: 50px;
+    font-size: 54px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 58px;
+    padding-top: 92px;
+    padding-left: 0;
+    max-width: 984px;
+    display: flex;
+    justify-content: flex-start;
   }
 
   .travel__quote {
-      font-weight: normal;
-      font-size: 24px;
-      line-height: 34px;
-      margin-top: 0;
-      margin-bottom: 36px;   
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26.08px;
+    padding-top: 40px;
+    padding-left: 0;
+    max-width: 984px;
+    display: flex;
+    justify-content: flex-start;
+    width: 769px;
+    margin-top: 0;
   }
 
   .travel__time-zones {
@@ -175,12 +190,13 @@ body {
   }
 
   .travel__time-zone {
-      font-weight: normal;
-      font-size: 18px;
-      line-height: 30px;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 18px;
+
       text-decoration: none;
-      color: white;
-      transition: 1s linear;
+  
+   
   }
   
 
@@ -218,12 +234,15 @@ background-position: center;
     gap: 1rem;
     /* justify-items: center; */
     justify-content: center;
+    padding-top: 92px;
   }
 
-   /* column */
+   /* place */
 
 
   .place {
+    color: #ffffff;
+
     max-width: 984px;
     margin: 0 auto;
     display: grid;
@@ -236,11 +255,21 @@ background-position: center;
     padding-top: 48px;
   }
 
+.place__link {
+  line-height: 22px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #ffffff;
+  text-decoration: none;
+}
+
   .__url-heading {
     padding-top: 110px;
-    font-weight: 900;
+    font-weight: 400;
     font-size: 12px;
     line-height: 20.4px;
+    color: #AAAAAA;
+
   }
 
   .place__title {
@@ -261,7 +290,12 @@ background-position: center;
 
 .place__paragraph {
   padding-top: 48px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 29.34px;
 }
+
  
 
 
@@ -276,11 +310,14 @@ background-position: center;
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
+margin-top: 92px;
+color: #ffffff;
+
 }
 
 
 .feynman__title {
-  font-weight: 600;
+  font-weight: 900;
   line-height: 76px;
   font-size: 72px;
   text-align: center;
@@ -293,10 +330,13 @@ background-position: center;
 }
 
 .feynman__subtitle {
-  font-size: 36px;
+  font-size: 18px;
   text-align: center;
-  padding-top: 70px;
-  line-height: 51px;
+  padding-top: 32px;
+  width: 360px;
+  line-height: 22px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -305,23 +345,27 @@ background-position: center;
   /* footer */
 
   .footer__columns {
-    max-width: 984px;
-    margin: 0 auto;
-    display: grid;
-    gap: 40px;
-    justify-content: center;
-    padding-top: 92px;
+    color: #ffffff;
+
+    min-width: 320px;
+    max-width: 1185px;
+    margin: auto;
+    display: flex;
+    height: 60px;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 28px;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
   }
-
-
-
 
 
 
 
   /* trying resizes with media */
 
-  @media (min-width: 320px) {
+  @media screen and (max-width: 425px) {
     .cards { 
       grid-template-columns: repeat(1, 288px); 
     }
@@ -372,6 +416,7 @@ background-position: center;
       font-weight: 600;
       font-size: 60px;
       line-height: 1.15;
+      
       max-width: 320px;
       text-align: center;
       display: flex;
@@ -380,7 +425,33 @@ background-position: center;
       justify-content: space-around;
       margin-top: 0;
       margin-bottom: 0;
-      padding-top: 64px;
+      padding-top: 40px;
+    }
+
+    
+
+    .cover__capation {
+      font-size: 10px;
+      font-style: normal;
+      line-height: 14px;
+      letter-spacing: 1.5px;
+      padding-top: 8px;
+      padding-left: 16px;
+      max-width: 320px;
+      display: flex;
+      margin: 0px auto 0px;
+      justify-content: flex-start;
+    }
+
+    .travel__kotainer {
+      width: 320px;
+      margin: 0 auto;
+  
+    }
+
+
+    .travel__quote {
+
     }
     
 }
@@ -411,9 +482,6 @@ background-position: center;
     max-width: 176px;
     max-height: 52px;
   }
-
-
-
 
 
   .cover__title {
@@ -454,9 +522,26 @@ background-position: center;
     justify-content: space-around;
     margin-top: 0;
     margin-bottom: 0;
-    max-width: 984px;
-    padding-top: 64px;
+    max-width: 768px;
+    padding-top: 56px;
   }
+
+
+
+  .cover__capation {
+    font-size: 10px;
+    font-style: normal;
+    line-height: 14px;
+    letter-spacing: 1.5px;
+    padding-top: 8px;
+    padding-left: 16px;
+    max-width: 768px;
+    display: flex;
+    margin: 0px auto 0px;
+    justify-content: flex-start;
+  }
+
+
   
 }
 
@@ -523,12 +608,40 @@ background-position: center;
       justify-content: space-around;
       margin-top: 0;
       margin-bottom: 0;
-      max-width: 984px;
-      padding-top: 64px;
+      padding-top: 56px;
 
+      max-width: 928px;
     }
     
 
+    .cover__capation {
+      font-size: 10px;
+      font-style: normal;
+      line-height: 14px;
+      letter-spacing: 1.5px;
+      padding-top: 8px;
+      padding-left: 0;
+      max-width: 928px;
+      display: flex;
+      margin: 0px auto 0px;
+      justify-content: flex-start;
+    }
+
+
+    .travel__quote {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 26.08px;
+      padding-top: 40px;
+      padding-left: 0;
+      max-width: 984px;
+      display: flex;
+      justify-content: flex-start;
+      width: 769px;
+      margin-top: 0;
+    }
+
+    
 }
 
 
@@ -557,9 +670,6 @@ background-position: center;
       max-width: 176px;
       max-height: 52px;
     }
-
-
-
 
 
     .cover__title {
@@ -594,7 +704,6 @@ background-position: center;
       font-size: 60px;
       line-height: 1.15;
       text-align: center;
-      max-width: 984px;
       display: flex;
       margin-left: auto;
       margin-right: auto;
@@ -602,6 +711,36 @@ background-position: center;
       margin-top: 0;
       margin-bottom: 0;
       padding-top: 64px;
+
+      max-width: 984px;
+
+    }
+
+    .cover__capation {
+      font-size: 10px;
+      font-style: normal;
+      line-height: 14px;
+      letter-spacing: 1.5px;
+      padding-top: 8px;
+      padding-left: 0;
+      max-width: 984px;
+      display: flex;
+      margin: 0px auto 0px;
+      justify-content: flex-start;
     }
     
+
+    .travel__quote {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 26.08px;
+      padding-top: 40px;
+      padding-left: 0;
+      max-width: 984px;
+      display: flex;
+      justify-content: flex-start;
+      width: 769px;
+      margin-top: 0;
+    }
+
   }   
