--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 @font-face {
   font-family: 'Inter';
   src: url(https://pictures.s3.yandex.net/frontend-developer/responsive/Inter-Regular.woff);
@@ -145,77 +143,77 @@ body {
 
 /* travel */
 
-  .travel {
-    color: #ffffff;
-  }
+.travel {
+  color: #ffffff;
+}
 
-  .travel__kotainer {
-    width: 984px;
-    margin: 0 auto;
-    
+.travel__kotainer {
+  width: 984px;
+  margin: 0 auto;
 
-  }
 
-  .travel__title {
-    font-size: 54px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 58px;
-    padding-top: 92px;
-    padding-left: 0;
-    max-width: 984px;
-    display: flex;
-    justify-content: flex-start;
-  }
+}
 
-  .travel__quote {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26.08px;
-    padding-top: 40px;
-    padding-left: 0;
-    max-width: 984px;
-    display: flex;
-    justify-content: flex-start;
-    width: 769px;
-    margin-top: 0;
-  }
+.travel__title {
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 58px;
+  padding-top: 92px;
+  padding-left: 0;
+  max-width: 984px;
+  display: flex;
+  justify-content: flex-start;
+}
 
-  .travel__time-zones {
-      list-style-type: none;
-      margin-left: 0;
-      padding-left: 0;
-      margin-top: 20px;
-      margin-bottom: 16px;
-  }
+.travel__quote {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26.08px;
+  padding-top: 40px;
+  padding-left: 0;
+  max-width: 984px;
+  display: flex;
+  justify-content: flex-start;
+  width: 769px;
+  margin-top: 0;
+}
 
-  .travel__time-zone {
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 18px;
+.travel__time-zones {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+  margin-top: 20px;
+  margin-bottom: 16px;
+}
 
-      text-decoration: none;
-  
-   
-  }
-  
+.travel__time-zone {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
 
-  /* column */
+  text-decoration: none;
+
+
+}
+
+
+/* column */
 
 .content__columns {
-display: grid;
-grid-gap: 10px;
-height: 100vh;
-grid-template-columns: repeat(auto-fill, minmax(100px, auto));
+  display: grid;
+  grid-gap: 10px;
+  height: 100vh;
+  grid-template-columns: repeat(auto-fill, minmax(100px, auto));
 
 }
 
 .content__column-image {
-width: 300px;
+  width: 300px;
 
-padding-bottom: 100%;
-background-size: cover;
-background-position: center;
+  padding-bottom: 100%;
+  background-size: cover;
+  background-position: center;
 }
 
 .content__column-image_hero_laika {
@@ -223,37 +221,37 @@ background-position: center;
 }
 
 
-  /* cards */
-
-  
-
-  .cards {
-    max-width: 1184px;
-    margin: 0 auto;
-    display: grid;
-    gap: 1rem;
-    /* justify-items: center; */
-    justify-content: center;
-    padding-top: 92px;
-  }
-
-   /* place */
+/* cards */
 
 
-  .place {
-    color: #ffffff;
 
-    max-width: 984px;
-    margin: 0 auto;
-    display: grid;
-    gap: 40px;
-    justify-content: center;
-    padding-top: 92px;
-  }
+.cards {
+  max-width: 1184px;
+  margin: 0 auto;
+  display: grid;
+  gap: 1rem;
+  /* justify-items: center; */
+  justify-content: center;
+  padding-top: 92px;
+}
 
-  .place__kosa {
-    padding-top: 48px;
-  }
+/* place */
+
+
+.place {
+  color: #ffffff;
+
+  max-width: 984px;
+  margin: 0 auto;
+  display: grid;
+  gap: 40px;
+  justify-content: center;
+  padding-top: 92px;
+}
+
+.place__kosa {
+  padding-top: 48px;
+}
 
 .place__link {
   line-height: 22px;
@@ -263,29 +261,29 @@ background-position: center;
   text-decoration: none;
 }
 
-  .__url-heading {
-    padding-top: 110px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 20.4px;
-    color: #AAAAAA;
+.place__url {
+  padding-top: 110px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20.4px;
+  color: #AAAAAA;
 
-  }
+}
 
-  .place__title {
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 76px;
-    color: #ffffff;
-    /* text-align: center; */
-    /* width: 60%; */
-    /* display: flex; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    /* justify-content: center; */
-    margin-top: 0;
-    margin-bottom: 0;
-   
+.place__title {
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  color: #ffffff;
+  /* text-align: center; */
+  /* width: 60%; */
+  /* display: flex; */
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  /* justify-content: center; */
+  margin-top: 0;
+  margin-bottom: 0;
+
 }
 
 .place__paragraph {
@@ -296,27 +294,27 @@ background-position: center;
   line-height: 29.34px;
 }
 
- 
-
-
-  /* cover */
 
 
 
-.feynman {
+/* cover */
+
+
+
+.baikal {
   width: 100%;
   min-height: 740px;
   background-image: url(/images/__background.png);
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
-margin-top: 92px;
-color: #ffffff;
+  margin-top: 92px;
+  color: #ffffff;
 
 }
 
 
-.feynman__title {
+.baikal__title {
   font-weight: 900;
   line-height: 76px;
   font-size: 72px;
@@ -329,7 +327,7 @@ color: #ffffff;
   margin-bottom: 0;
 }
 
-.feynman__subtitle {
+.baikal__subtitle {
   font-size: 18px;
   text-align: center;
   padding-top: 32px;
@@ -342,142 +340,140 @@ color: #ffffff;
 }
 
 
-  /* footer */
+/* footer */
 
-  .footer__columns {
-    color: #ffffff;
-
-    min-width: 320px;
-    max-width: 1185px;
-    margin: auto;
-    display: flex;
-    height: 60px;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 28px;
-    align-content: center;
-    flex-wrap: wrap;
-    flex-direction: row;
-  }
-
-
-
-
-  /* trying resizes with media */
-
-  @media screen and (max-width: 425px) {
-    .cards { 
-      grid-template-columns: repeat(1, 288px); 
-    }
-  
-    .__item {
-      max-width: 288px;
-     }
-    .place {
-      grid-template-columns: 320px; 
-    }
-
-    .logo_place_header {
-      max-width: 142px;
-      max-height: 42px;
-    }
-
-    
-
-    .cover__title {
-      font-weight: 900;
-      font-size: 40px;
-      line-height: 44px;
-      text-align: center;
-      max-width: 288px;
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      justify-content: space-around;
-      margin-top: 0;
-      margin-bottom: 0;
-    }
-
-
-    .cover__subtitle {
-      font-size: 16px;
-      font-style: normal;
-      line-height: 20px;
-      text-align: center;
-      max-width: 288px;
-      display: flex;
-      margin: 16px auto 0px;
-      justify-content: space-around;
-    }
-    
-   
-
-    .cover__train {
-      font-weight: 600;
-      font-size: 60px;
-      line-height: 1.15;
-      
-      max-width: 320px;
-      text-align: center;
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      justify-content: space-around;
-      margin-top: 0;
-      margin-bottom: 0;
-      padding-top: 40px;
-    }
-
-    
-
-    .cover__capation {
-      font-size: 10px;
-      font-style: normal;
-      line-height: 14px;
-      letter-spacing: 1.5px;
-      padding-top: 8px;
-      padding-left: 16px;
-      max-width: 320px;
-      display: flex;
-      margin: 0px auto 0px;
-      justify-content: flex-start;
-    }
-
-    .travel__kotainer {
-      width: 320px;
-      margin: 0 auto;
-  
-    }
-
-
-    .travel__quote {
-
-    }
-    
+.footer__columns {
+  color: #ffffff;
+  min-width: 320px;
+  max-width: 1185px;
+  margin: auto;
+  display: flex;
+  height: 60px;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 28px;
+  align-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 
 
 
-  
-  @media (min-width: 768px) {
-    .cards {
-       grid-template-columns: repeat(2, 352px); 
-      }
-  
+/* trying resizes with media */
 
-  .__item {
+@media screen and (max-width: 425px) {
+  .cards {
+    grid-template-columns: repeat(1, 288px);
+  }
+
+  .cards__item {
+    max-width: 288px;
+  }
+
+  .place {
+    grid-template-columns: 320px;
+  }
+
+  .logo_place_header {
+    max-width: 142px;
+    max-height: 42px;
+  }
+
+
+
+  .cover__title {
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 44px;
+    text-align: center;
+    max-width: 288px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+
+  .cover__subtitle {
+    font-size: 16px;
+    font-style: normal;
+    line-height: 20px;
+    text-align: center;
+    max-width: 288px;
+    display: flex;
+    margin: 16px auto 0px;
+    justify-content: space-around;
+  }
+
+
+
+  .cover__train {
+    font-weight: 600;
+    font-size: 60px;
+    line-height: 1.15;
+
+    max-width: 320px;
+    text-align: center;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 40px;
+  }
+
+
+
+  .cover__capation {
+    font-size: 10px;
+    font-style: normal;
+    line-height: 14px;
+    letter-spacing: 1.5px;
+    padding-top: 8px;
+    padding-left: 16px;
+    max-width: 320px;
+    display: flex;
+    margin: 0px auto 0px;
+    justify-content: flex-start;
+  }
+
+  .travel__kotainer {
+    width: 320px;
+    margin: 0 auto;
+
+  }
+
+
+  .travel__quote {}
+
+}
+
+
+
+
+
+@media (min-width: 768px) {
+  .cards {
+    grid-template-columns: repeat(2, 352px);
+  }
+
+
+  .cards__item {
     max-width: 352px;
-   }
+  }
 
-   .place {
-    grid-template-columns: 348px 352px; 
+  .place {
+    grid-template-columns: 348px 352px;
   }
 
   .place__kosa {
     max-width: 348px;
   }
- 
+
   .logo_place_header {
     max-width: 176px;
     max-height: 52px;
@@ -509,7 +505,7 @@ color: #ffffff;
     margin: 32px auto 0px;
     justify-content: space-around;
   }
-  
+
 
   .cover__train {
     font-weight: 600;
@@ -542,205 +538,209 @@ color: #ffffff;
   }
 
 
-  
+
 }
 
 
 
 
-  @media (min-width: 1024px) {
-    .cards { grid-template-columns: repeat(3, 300px);
-      
-     }
-     .__item {
-      max-width: 300px;
-     }    
+@media (min-width: 1024px) {
+  .cards {
+    grid-template-columns: repeat(3, 300px);
 
-     .place {
-      grid-template-columns: 440px 456px; 
-    }
+  }
 
-    .place__kosa {
-      max-width: 440px;
-    }
+  .cards__item {
+    max-width: 300px;
+  }
 
-    .logo_place_header {
-      max-width: 176px;
-      max-height: 52px;
-    }
+  .place {
+    grid-template-columns: 440px 456px;
+  }
 
+  .place__kosa {
+    max-width: 440px;
+  }
 
-    .cover__title {
-      font-weight: 900;
-      font-size: 96px;
-      line-height: 100px;
-      text-align: center;
-      max-width: 720px;
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      justify-content: space-around;
-      margin-top: 0;
-      margin-bottom: 0;
-    }
+  .logo_place_header {
+    max-width: 176px;
+    max-height: 52px;
+  }
 
 
-    .cover__subtitle {
-      font-size: 30px;
-      font-style: normal;
-      line-height: 36px;
-      text-align: center;
-      max-width: 640px;
-      display: flex;
-      margin: 32px auto 0px;
-      justify-content: space-around;
-    }
+  .cover__title {
+    font-weight: 900;
+    font-size: 96px;
+    line-height: 100px;
+    text-align: center;
+    max-width: 720px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
 
-    .cover__train {
-      font-weight: 600;
-      font-size: 60px;
-      line-height: 1.15;
-      text-align: center;
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      justify-content: space-around;
-      margin-top: 0;
-      margin-bottom: 0;
-      padding-top: 56px;
-
-      max-width: 928px;
-    }
-    
-
-    .cover__capation {
-      font-size: 10px;
-      font-style: normal;
-      line-height: 14px;
-      letter-spacing: 1.5px;
-      padding-top: 8px;
-      padding-left: 0;
-      max-width: 928px;
-      display: flex;
-      margin: 0px auto 0px;
-      justify-content: flex-start;
-    }
+  .cover__subtitle {
+    font-size: 30px;
+    font-style: normal;
+    line-height: 36px;
+    text-align: center;
+    max-width: 640px;
+    display: flex;
+    margin: 32px auto 0px;
+    justify-content: space-around;
+  }
 
 
-    .travel__quote {
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 26.08px;
-      padding-top: 40px;
-      padding-left: 0;
-      max-width: 984px;
-      display: flex;
-      justify-content: flex-start;
-      width: 769px;
-      margin-top: 0;
-    }
+  .cover__train {
+    font-weight: 600;
+    font-size: 60px;
+    line-height: 1.15;
+    text-align: center;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 56px;
 
-    
+    max-width: 928px;
+  }
+
+
+  .cover__capation {
+    font-size: 10px;
+    font-style: normal;
+    line-height: 14px;
+    letter-spacing: 1.5px;
+    padding-top: 8px;
+    padding-left: 0;
+    max-width: 928px;
+    display: flex;
+    margin: 0px auto 0px;
+    justify-content: flex-start;
+  }
+
+
+  .travel__quote {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26.08px;
+    padding-top: 40px;
+    padding-left: 0;
+    max-width: 984px;
+    display: flex;
+    justify-content: flex-start;
+    width: 769px;
+    margin-top: 0;
+  }
+
+
 }
 
 
 
-  @media (min-width: 1280px) {
-    .cards { 
-      grid-template-columns: repeat(4, 284px); 
-    }
-    .__item {
-     width: 284px;
-    }
+@media (min-width: 1280px) {
+  .cards {
+    grid-template-columns: repeat(4, 284px);
+  }
 
-    .place {
-      grid-template-columns: 460px 484px; 
-    }
+  .cards__item {
+    width: 284px;
+  }
 
-    .place__kosa {
-      max-width: 460px;
-    }
-    .footer__columns {
-      grid-template-columns: 460px ; 
+  .place {
+    grid-template-columns: 460px 484px;
+  }
 
-    }
+  .place__kosa {
+    max-width: 460px;
+  }
 
-    .logo_place_header {
-      max-width: 176px;
-      max-height: 52px;
-    }
+  .footer__columns {
+    grid-template-columns: 460px;
 
+  }
 
-    .cover__title {
-      font-weight: 900;
-      font-size: 96px;
-      line-height: 100px;
-      text-align: center;
-      max-width: 720px;
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      justify-content: space-around;
-      margin-top: 0;
-      margin-bottom: 0;
-    }
+  .logo_place_header {
+    max-width: 176px;
+    max-height: 52px;
+  }
 
 
-    .cover__subtitle {
-      font-size: 30px;
-      font-style: normal;
-      line-height: 36px;
-      text-align: center;
-      max-width: 640px;
-      display: flex;
-      margin: 32px auto 0px;
-      justify-content: space-around;
-    }
+  .cover__title {
+    font-weight: 900;
+    font-size: 96px;
+    line-height: 100px;
+    text-align: center;
+    max-width: 720px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
 
-    .cover__train {
-      font-weight: 600;
-      font-size: 60px;
-      line-height: 1.15;
-      text-align: center;
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      justify-content: space-around;
-      margin-top: 0;
-      margin-bottom: 0;
-      padding-top: 64px;
+  .cover__subtitle {
+    font-size: 30px;
+    font-style: normal;
+    line-height: 36px;
+    text-align: center;
+    max-width: 640px;
+    display: flex;
+    margin: 32px auto 0px;
+    justify-content: space-around;
+  }
 
-      max-width: 984px;
 
-    }
+  .cover__train {
+    font-weight: 600;
+    font-size: 60px;
+    line-height: 1.15;
+    text-align: center;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 64px;
 
-    .cover__capation {
-      font-size: 10px;
-      font-style: normal;
-      line-height: 14px;
-      letter-spacing: 1.5px;
-      padding-top: 8px;
-      padding-left: 0;
-      max-width: 984px;
-      display: flex;
-      margin: 0px auto 0px;
-      justify-content: flex-start;
-    }
-    
+    max-width: 984px;
 
-    .travel__quote {
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 26.08px;
-      padding-top: 40px;
-      padding-left: 0;
-      max-width: 984px;
-      display: flex;
-      justify-content: flex-start;
-      width: 769px;
-      margin-top: 0;
-    }
+  }
 
-  }   
+  .cover__capation {
+    font-size: 10px;
+    font-style: normal;
+    line-height: 14px;
+    letter-spacing: 1.5px;
+    padding-top: 8px;
+    padding-left: 0;
+    max-width: 984px;
+    display: flex;
+    margin: 0px auto 0px;
+    justify-content: flex-start;
+  }
+
+
+  .travel__quote {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26.08px;
+    padding-top: 40px;
+    padding-left: 0;
+    max-width: 984px;
+    display: flex;
+    justify-content: flex-start;
+    width: 769px;
+    margin-top: 0;
+  }
+
+}
