--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-
-
 /* это не совсем по БЭМ, но в учебном проекте допустимо.
 В реальных условиях пишите margin: 0; внутри блоков */
 
@@ -24,20 +22,11 @@ body {
 }
 
 
-
-
-
-
-
-
-
-
 /* header */
 
 
 .header__container {
-  min-width: 320px;
-  max-width: 1280px;
+
   margin: auto;
   display: flex;
   height: 60px;
@@ -157,6 +146,25 @@ body {
   justify-content: flex-start;
 }
 
+
+.lead__quote {
+  font-size: 10px;
+  line-height: 14px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  padding-top: 8px;
+  /* padding-left: 0; */
+  max-width: 984px;
+  display: flex;
+  justify-content: flex-start;
+
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 /* travel */
 
 .travel {
@@ -208,6 +216,7 @@ body {
   font-size: 12px;
   line-height: 18px;
   text-decoration: none;
+
 }
 
 .travel__span-accent {
@@ -254,6 +263,8 @@ body {
   /* justify-items: center; */
   justify-content: center;
   padding-top: 92px;
+  grid-template-columns: repeat(2, 352px 352px);
+
 }
 
 /* place */
@@ -269,15 +280,14 @@ body {
   padding-top: 92px;
   grid-template-columns: 460px 484px;
 
- 
+
 }
 
 
 
-  
 
-.place__kosa {
-}
+
+.place__kosa {}
 
 .place__link {
   line-height: 22px;
@@ -298,7 +308,7 @@ body {
 }
 
 
-.place__url_size  {
+.place__url_size {
   padding-top: 100px;
 }
 
@@ -340,7 +350,7 @@ body {
 .baikal {
   width: 100%;
   min-height: 740px;
-  background-image: url(/images/__background.png);
+
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
@@ -377,6 +387,19 @@ body {
   z-index: -1;
 }
 
+.baikal__train {
+  top: 0px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0px;
+  right: 0px;
+  text-align: center;
+  z-index: -2;
+  width: 1184px;
+}
+
+
 .baikal__overlay {
   top: 0px;
   /* width: 1184px; */
@@ -404,7 +427,6 @@ body {
 
 .footer__columns {
   color: #ffffff;
-  min-width: 320px;
   max-width: 1185px;
   margin: auto;
   display: flex;
@@ -426,157 +448,21 @@ body {
   line-height: 18px;
   text-decoration: none;
   padding-right: 18px;
+  display: inline-block;
 
+}
+
+
+.footer__copyright {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
 }
 
 
 
 /* trying resizes with media */
 
-@media screen and (max-width: 425px) {
-  .cards {
-    grid-template-columns: repeat(1, 288px);
-  }
 
-  .cards__item {
-    max-width: 288px;
-  }
 
 
-  .logo_place_header {
-    max-width: 142px;
-    max-height: 42px;
-  }
-
-
-
-
-
-
-
-
-
-  .travel__kotainer {
-    width: 320px;
-    margin: 0 auto;
-
-  }
-
-
-  .travel__quote {}
-
-}
-
-
-
-
-
-@media (min-width: 768px) {
-  .cards {
-    grid-template-columns: repeat(2, 352px);
-  }
-
-
-  .cards__item {
-    max-width: 352px;
-  }
-
-
-
-  .logo_place_header {
-    max-width: 176px;
-    max-height: 52px;
-  }
-
-
-
-
-
-
-
-
-}
-
-
-
-
-@media (min-width: 1024px) {
-  .cards {
-    grid-template-columns: repeat(3, 300px);
-
-  }
-
-  .cards__item {
-    max-width: 300px;
-  }
-
-
-
-  .logo_place_header {
-    max-width: 176px;
-    max-height: 52px;
-  }
-
-
-
-
-
-  .travel__quote {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26.08px;
-    padding-top: 40px;
-    padding-left: 0;
-    max-width: 984px;
-    display: flex;
-    justify-content: flex-start;
-    width: 769px;
-    margin-top: 0;
-  }
-
-
-}
-
-
-
-@media (min-width: 1280px) {
-  .cards {
-    grid-template-columns: repeat(4, 284px);
-  }
-
-  .cards__item {
-    width: 284px;
-  }
-
-
-
-
-  .footer__columns {
-    grid-template-columns: 460px;
-
-  }
-
-  .logo_place_header {
-    max-width: 176px;
-    max-height: 52px;
-  }
-
-
-
-
-
-
-  .travel__quote {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26.08px;
-    padding-top: 40px;
-    padding-left: 0;
-    max-width: 984px;
-    display: flex;
-    justify-content: flex-start;
-    width: 769px;
-    margin-top: 0;
-  }
-
-}
