--- a/styles/style.css
+++ b/styles/style.css
@@ -349,7 +349,7 @@ body {
 
 .baikal {
   width: 100%;
-  min-height: 740px;
+  min-height: 62.5vw;
 
   background-repeat: no-repeat;
   background-position: center;
@@ -396,7 +396,7 @@ body {
   right: 0px;
   text-align: center;
   z-index: -2;
-  width: 1184px;
+  width: 100%;
 }
 
 
@@ -410,8 +410,8 @@ body {
   right: 0px;
   text-align: center;
   z-index: -2;
-  width: 1184px;
-  height: 740px;
+  width: 100%;
+  height: 62.5vw;
   background: black;
   opacity: 30%;
   transition: 1s linear;
