--- a/styles/stylemedia425.css
+++ b/styles/stylemedia425.css
@@ -38,7 +38,7 @@
 
   .lead__train {
     padding-top: 40px;
-    max-width: 320px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
@@ -157,13 +157,13 @@
   }
 
   .baikal__overlay {
-    max-width: 320px;
+    max-width: 100%;
     max-height: 200px;
     margin: 0 auto;
   }
 
   .baikal__train {
-    max-width: 320px;
+    max-width: 100%;
   }
 
   .travel__quote {}
