--- a/styles/stylemedia425.css
+++ b/styles/stylemedia425.css
@@ -58,7 +58,7 @@
     margin-bottom: 0;
   }
 
-  .travel__kotainer {
+  .travel__container {
     font-size: 40px;
     line-height: 44px;
     max-width: 288px;
