--- a/styles/stylemedia768_425.css
+++ b/styles/stylemedia768_425.css
@@ -47,7 +47,7 @@
     margin-right: 0;
   }
 
-  .travel__kotainer {
+  .travel__container {
     width: 100%;
     margin-left: 24px;
     margin-right: 24px;
