--- a/blocks/lead/__quote/lead__quote.css
+++ b/blocks/lead/__quote/lead__quote.css
@@ -1,7 +1,39 @@
+.lead__quote {
+    font-size: 10px;
+    line-height: 14px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    padding-top: 8px;
+    /* padding-left: 0; */
+    max-width: 984px;
+    display: flex;
+    justify-content: flex-start;  
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .lead__quote {
+        margin-left: 24px;
+        margin-right: 24px;
+      }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .lead__quote {
+        max-width: 288px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+    
+}
