--- a/blocks/baikal/__overlay/baikal__overlay.css
+++ b/blocks/baikal/__overlay/baikal__overlay.css
@@ -1,7 +1,45 @@
+.baikal__overlay {
+    top: 0px;
+    /* width: 1184px; */
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+    z-index: -2;
+    width: 100%;
+    height: 62.5vw;
+    background: black;
+    opacity: 30%;
+    transition: 1s linear;
+    text-decoration: none;
+    color: white;
+  }  
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .baikal__overlay {
+        width: 100%;
+        margin: auto;
+      }
+      
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .baikal__overlay {
+        width: 100%;
+        margin: auto;
+        max-height: 62.5vw;
+        min-height: 26vw;
+      }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .baikal__overlay {
+        max-width: 100%;
+        max-height: 200px;
+        margin: 0 auto;
+      }
+}
