--- a/blocks/baikal/__title/baikal__title.css
+++ b/blocks/baikal/__title/baikal__title.css
@@ -1,7 +1,37 @@
+.baikal__title {
+    font-weight: 900;
+    line-height: 76px;
+    font-size: 72px;
+    text-align: center;
+    max-width: 648px;
+    padding-top: 196px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: white;
+    text-decoration: none;
+}
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .baikal__title {
+        font-size: 9.3vw;
+        line-height: 1.04em;
+        padding-top: 15vw;
+      }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .baikal__title {
+        max-width: 270px;
+        line-height: 32px;
+        font-size: 35px;
+        padding-top: 33px;
+    }
+}
