--- a/blocks/baikal/__train/baikal__train.css
+++ b/blocks/baikal/__train/baikal__train.css
@@ -1,7 +1,34 @@
+.baikal__train {
+    top: 0px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+    z-index: -2;
+    width: 100%;
+  }
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .baikal__train {
+        width: 100%;
+        margin: auto;
+      }
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .baikal__train {
+        width: 100%;
+        margin: auto;
+      }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+
+  .baikal__train {
+    max-width: 100%;
+  }
+}
