--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,7 +1,21 @@
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
+@media only screen and (max-width: 1280px) and (min-width: 1024px) {
+    
+}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .cards__item {
+        width: 300px;
+        }
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .cards__item {
+        max-width: 100%;
+      }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .cards__item {
+        max-width: 288px;
+      }
+}
