--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,37 +1,39 @@
-.travel__title {
-    font-size: 54px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 58px;
+.cards {
+    max-width: 1184px;
+    margin: 0 auto;
+    display: grid;
+    gap: 1rem;
+    /* justify-items: center; */
+    justify-content: center;
     padding-top: 92px;
-    padding-left: 0;
-    max-width: 984px;
-    display: flex;
-    justify-content: flex-start;
+    grid-template-columns: repeat(2, 352px 352px);
   }
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {
-  
+
 }
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
-    
-}
-
-@media only screen and (max-width: 768px) and (min-width: 425px) {
-    .travel__title {
-        max-width: 100%;
-        margin-left: 0;
-        margin-right: 0;
+    .cards {
+        padding-top: 64px;
+        grid-template-columns: repeat(3, 300px);
       }
 }
 
-@media only screen and (max-width: 425px) {
-    .travel__title {
-        font-size: 32px;
-        line-height: 35px;
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+
+    .cards {
+        max-width: 100%;
         padding-top: 64px;
-        max-width: 288px;
+        grid-template-columns: repeat(2, 45.8vw);
+      }
+    
+}
+
+@media only screen and (max-width: 425px) {
+    .cards {
+        padding-top: 64px;
+        grid-template-columns: repeat(1, 288px);
         margin-left: auto;
         margin-right: auto;
         margin-top: 0;
