--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,25 @@
+.footer__link {
+    color: #ffffff;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    text-decoration: none;
+    padding-right: 18px;
+    display: inline-block;
+  }
+  
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+        padding-bottom: 50px;
+        display: block;
+      }
+}
