--- a/blocks/footer/__list/footer__container.css
+++ b/blocks/footer/__list/footer__container.css
@@ -1,9 +1,4 @@
-.baikal__link {
-    color: white;
-    text-decoration: none;
-    max-width: 100%;
-    cursor: pointer;
-  }
+
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
@@ -11,6 +6,4 @@
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {}
 
-@media only screen and (max-width: 425px) {
-    
-}
+@media only screen and (max-width: 425px) {}
