--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -1,7 +1,36 @@
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
+.header__container {
+    margin: auto;
+    display: flex;
+    height: 60px;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 28px;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1280px) and (min-width: 1024px) {
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
 
-@media only screen and (max-width: 425px) {}
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    
+}
+
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .header__container {
+        margin-left: 24px;
+        margin-right: 24px;
+      }
+}
+
+@media only screen and (max-width: 425px) {
+    .header__container {
+        width: 288px;
+        margin-left: auto;
+        margin-right: auto;
+      }    
+}
