--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,3 +1,13 @@
+.header__link {
+    line-height: 28px;
+    font-size: 24px;
+    font-weight: normal;
+    color: #ffffff;
+    padding-left: 18px;
+    text-decoration: none;
+    transition: 1s linear;
+  }
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
