--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,42 @@
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
+.lead__subtitle {
+    font-size: 30px;
+    font-style: normal;
+    line-height: 36px;
+    text-align: center;
+    max-width: 640px;
+    display: flex;
+    margin: 32px auto 0px;
+    justify-content: space-around;
+  }
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1280px) and (min-width: 1024px) {
+    .lead__subtitle {
+        font-size: 25px;
+      }
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .lead__subtitle {
+        font-size: 30px;
+      }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .lead__subtitle {
+        font-size: 4vw;
+        line-height: 1em;
+      }    
+}
+
+@media only screen and (max-width: 425px) {
+    .lead__subtitle {
+        padding-top: 16px;
+        font-size: 16px;
+        line-height: 20px;
+        max-width: 288px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+}
