--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,46 @@
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
+.lead__title {
+    font-weight: 900;
+    font-size: 96px;
+    line-height: 100px;
+    text-align: center;
+    max-width: 720px;
+    padding-top: 56px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1280px) and (min-width: 1024px) {
+    .lead__title {
+        font-size: 80px;
+    }
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .lead__title {
+        font-size: 96px;
+    }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .lead__title {
+        font-size: 12.5vw;
+        line-height: 1.04em;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .lead__title {
+        padding-top: 48px;
+        font-size: 40px;
+        line-height: 44px;
+        width: 288px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+}
