--- a/blocks/places/__kosa/place__kosa.css
+++ b/blocks/places/__kosa/place__kosa.css
@@ -1,8 +1,22 @@
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .place__kosa {
+        width: 100%;
+        margin: auto;
+      }
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .place__kosa {
+        width: 100%;
+        margin: auto;
+      }    
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .place__kosa {
+        max-width: 320px;
+      }
+}
