--- a/blocks/places/__link/place__link.css
+++ b/blocks/places/__link/place__link.css
@@ -1,7 +1,17 @@
+.place__link {
+    line-height: 22px;
+    font-size: 18px;
+    font-weight: 400;
+    color: #ffffff;
+    text-decoration: underline;
+  }
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    
+}
