--- a/blocks/places/__paragraph/place__paragraph.css
+++ b/blocks/places/__paragraph/place__paragraph.css
@@ -1,7 +1,23 @@
+.place__paragraph {
+    padding-bottom: 56px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 29.34px;
+  }
+
+  .place__paragraph:last-child {
+    padding-bottom: 0;
+  }
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .place__paragraph {
+        max-width: 288px;
+        padding-bottom: 25px;
+      }
+}
