--- a/blocks/places/__title/place__title.css
+++ b/blocks/places/__title/place__title.css
@@ -1,7 +1,35 @@
+.place__title {
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 76px;
+    color: #ffffff;
+    /* text-align: center; */
+    /* width: 60%; */
+    /* display: flex; */
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+    /* justify-content: center; */
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .place__title {
+        font-size: 42px;
+        max-width: 340px;
+      }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .place__title {
+        font-size: 32px;
+        line-height: 35px;
+      }
+}
