--- a/blocks/places/__url/place__url.css
+++ b/blocks/places/__url/place__url.css
@@ -1,8 +1,9 @@
-.baikal__link {
-    color: white;
-    text-decoration: none;
-    max-width: 100%;
-    cursor: pointer;
+.place__url {
+    padding-top: 30px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20.4px;
+    color: #AAAAAA;
   }
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
