--- a/blocks/places/__url_size/place__url_size.css
+++ b/blocks/places/__url_size/place__url_size.css
@@ -1,7 +1,17 @@
+.place__url_size {
+    padding-top: 100px;
+  }
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
 
-@media only screen and (max-width: 425px) {}
+}
+
+@media only screen and (max-width: 425px) {
+    .place__url {
+        padding-top: 0;
+      }
+}
