--- a/blocks/travel/__container/travel__container.css
+++ b/blocks/travel/__container/travel__container.css
@@ -1,7 +1,35 @@
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
+.travel__kotainer {
+    width: 984px;
+    margin: 0 auto;
+  }
+  
+@media only screen and (max-width: 1280px) and (min-width: 1024px) {
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .travel__container {
+        width: 100%;
+        margin: auto;
+      }
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .travel__container {
+        width: 100%;
+        margin-left: 24px;
+        margin-right: 24px;
+      }
+}
+
+@media only screen and (max-width: 425px) {
+  .travel__container {
+    font-size: 40px;
+    line-height: 44px;
+    max-width: 288px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
