--- a/blocks/travel/__quote/travel__quote.css
+++ b/blocks/travel/__quote/travel__quote.css
@@ -1,7 +1,37 @@
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
+.travel__quote {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26.08px;
+    padding-top: 40px;
+    padding-left: 0;
+    max-width: 984px;
+    display: flex;
+    justify-content: flex-start;
+    width: 769px;
+    margin-top: 0;
+  }
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1280px) and (min-width: 1024px) {
+    
+}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .travel__quote {
+        max-width: 100%;
+      }
+      
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .travel__quote {
+        max-width: 93.9vw;
+        margin-left: 0;
+        margin-right: 0;
+      }
+    }
+
+@media only screen and (max-width: 425px) {
+    .travel__quote {
+        max-width: 288px;
+      } 
+}
