--- a/blocks/travel/__time-zone/travel__time-zone.css
+++ b/blocks/travel/__time-zone/travel__time-zone.css
@@ -1,7 +1,21 @@
+.travel__time-zone {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 18px;
+    text-decoration: none;
+}
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+    .travel__time-zone {
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 18px;
+        text-decoration: none;
+    }
+}
