--- a/blocks/travel/__time-zones/travel__time-zones.css
+++ b/blocks/travel/__time-zones/travel__time-zones.css
@@ -1,7 +1,26 @@
+.travel__time-zones {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+    margin-top: 20px;
+    margin-bottom: 16px;
+  }
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+
+  .travel__time-zones {
+    list-style-type: none;
+    padding-top: 34px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
