--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,17 @@
 
 @import url(../vendor/normalize.css);
 
-@import url(../blocks/rotation/rotation.css);
+@import url(../blocks/header/__container/header__container.css);
+@import url(../blocks/header/__logo/logo__place_header.css);
+@import url(../blocks/header/__link/header__link.css);
+
+
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__container/lead__container.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__way/lead__way.css);
+@import url(../blocks/lead/__train/lead__train.css);
+@import url(../blocks/lead/__quote/lead__quote.css);
 
 
 @import url(../blocks/header/header.css);
