--- a/blocks/lead/__way/lead__way.css
+++ b/blocks/lead/__way/lead__way.css
@@ -1,3 +1,16 @@
+
+.lead__way {
+    z-index: 3;
+    top: 585px;
+    width: 938px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+  }
+
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
