--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -2,7 +2,8 @@
   font-family: Helvetica, Arial, sans-serif;
   max-width: 1280px;
   background-color: #2A2C2F;
-
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
