--- a/blocks/travel/__container/travel__container.css
+++ b/blocks/travel/__container/travel__container.css
@@ -1,6 +1,7 @@
-.travel__kotainer {
+.travel__container {
     width: 984px;
     margin: 0 auto;
+    color: #ffffff;
   }
   
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {
