--- a/pages/index.css
+++ b/pages/index.css
@@ -6,92 +6,41 @@
 @import url(../blocks/header/__logo/logo__place_header.css);
 @import url(../blocks/header/__link/header__link.css);
 
-
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__container/lead__container.css);
 @import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__way/lead__way.css);
 @import url(../blocks/lead/__train/lead__train.css);
 @import url(../blocks/lead/__quote/lead__quote.css);
 
-
-@import url(../blocks/header/header.css);
-@import url(../blocks/header/__link/header__link.css);
-@import url(../blocks/header/__main-illustration/header__main-illustration.css);
-@import url(../blocks/header/__square-pic/header__square-pic.css);
-@import url(../blocks/header/__subtitle/header__subtitle.css);
-@import url(../blocks/header/__title/header__title.css);
-@import url(../blocks/logo/_place/logo_place_header.css);
-
-@import url(../blocks/description/description.css);
-
-@import url(../blocks/two-columns/two-columns.css);
-@import url(../blocks/two-columns/__brief/two-columns__brief.css);
-@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
-@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
-@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
-
-@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/travel/__container/travel__container.css);
+@import url(../blocks/travel/__title/travel__title.css);
+@import url(../blocks/travel/__quote/travel__quote.css);
+@import url(../blocks/travel/__time-zones/travel__time-zones.css);
+@import url(../blocks/travel/__time-zone/travel__time-zone.css);
+@import url(../blocks/travel/__span-accent/travel__span-accent.css);
 
 @import url(../blocks/cards/cards.css);
-@import url(../blocks/cards/__description/cards__description.css);
-@import url(../blocks/cards/__image/cards__image.css);
 @import url(../blocks/cards/__item/cards__item.css);
-@import url(../blocks/cards/__title/cards__title.css);
 
-@import url(../blocks/video/video.css);
-@import url(../blocks/video/__iframe/video__iframe.css);
-@import url(../blocks/video/__iframes/video__iframes.css);
+@import url(../blocks/places/__container/place__container.css);
+@import url(../blocks/places/__title/place__title.css);
+@import url(../blocks/places/__url_size/place__url_size.css);
+@import url(../blocks/places/__url/place__url.css);
+@import url(../blocks/places/__link/place__link.css);
+@import url(../blocks/places/__kosa/place__kosa.css);
+@import url(../blocks/places/__paragraph/place__paragraph.css);
 
-@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
-@import url(../blocks/section-subtitle/section-subtitle.css);
-@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
-@import url(../blocks/section-title/section-title.css);
-
-@import url(../blocks/oakley/oakley.css);
-
-@import url(../blocks/feynman/feynman.css);
-@import url(../blocks/feynman/__link/feynman__link.css);
-@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
-@import url(../blocks/feynman/__title/feynman__title.css);
-
-@import url(../blocks/digits/digits.css);
-
-@import url(../blocks/table/table.css);
-@import url(../blocks/table/__cell/table__cell.css);
-@import url(../blocks/table/__heading/table__heading.css);
-@import url(../blocks/table/__text/table__text.css);
-
-@import url(../blocks/table/_theme/table_theme_dark.css);
-@import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
-
-@import url(../blocks/khan/khan.css);
-@import url(../blocks/khan/__author/khan__author.css);
-@import url(../blocks/khan/__book-container/khan__book-container.css);
-@import url(../blocks/khan/__book-pic/khan__book-pic.css);
-@import url(../blocks/khan/__buy-link/khan__buy-link.css);
-@import url(../blocks/khan/__container/khan__container.css);
-@import url(../blocks/khan/__quote/khan__quote.css);
-@import url(../blocks/khan/__quote-author/khan__quote-author.css);
-@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
-@import url(../blocks/khan/__title/khan__title.css);
-
-@import url(../blocks/kaufman/kaufman.css);
-@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
-
-@import url(../blocks/resources/resources.css);
-@import url(../blocks/resources/__link/resources__link.css);
-@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
-@import url(../blocks/resources/__logo/resources__logo.css);
+@import url(../blocks/baikal/baikal.css);
+@import url(../blocks/baikal/__link/baikal__link.css);
+@import url(../blocks/baikal/__title/baikal__title.css);
+@import url(../blocks/baikal/__subtitle/baikal__subtitle.css);
+@import url(../blocks/baikal/__train/baikal__train.css);
+@import url(../blocks/baikal/__overlay/baikal__overlay.css);
 
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__author/footer__author.css);
-@import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
-@import url(../blocks/footer/__column/_content/footer__column_content_info.css);
-@import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__list/footer__container.css);
 
-@import url(../blocks/footer/__column-link/footer__column-link.css);
-@import url(../blocks/footer/__column-links/footer__column-links.css);
-@import url(../blocks/footer/__columns/footer__columns.css);
-@import url(../blocks/footer/__social-icon/footer__social-icon.css);
-@import url(../blocks/logo/_place/logo_place_footer.css);
